deployment/master/deployment-down.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edpingestionlog
spec:
  selector:
    matchLabels:
      run: edpingestionlog
  replicas: 0
  template:
    metadata:
      labels:
        run: edpingestionlog
    spec:
     containers:
     - name: mycontainer
       image: docker.repo1.uhc.com/bds_oso_id/edp_trans_ingestion_log-master
       securityContext:
         runAsUser: 31000
         allowPrivilegeEscalation: false
       ports:
       - containerPort: 8080
       imagePullPolicy: Always
       resources:
        requests:
          memory: "300Mi"
          cpu: "100m"
        limits:
          memory: "2Gi"
          cpu: "1500m"
