deployment/master/deploy-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: edpingestionlog-svc3
spec:
  ports:
  - port: 8080
  selector:
    run: edpingestionlog
  type: NodePort
