deployment/master/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: edpingestionlog
spec:
  podSelector:
   matchLabels:
    run: edpingestionlog
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - ports:
      - protocol: TCP
        port: 8080
      - protocol: TCP
        port: 9093
  egress:
     - ports:
       - protocol: TCP
         port: 443
       - protocol: TCP
         port: 50000
       - protocol: TCP
         port: 22110
       - protocol: TCP
         port: 9093
       - protocol: TCP
         port: 8089
       - protocol: TCP
         port: 9996
